# TrainingAgent2

./: .env.example  README.md
backend/: README.md  README_SERVICES.md  pyproject.toml  run_backend.sh
backend/app/: advice_explainer.py  advice_service.py  advisor_core.py  alerts.py  api.py  api_explain.py  api_extra.py  api_pipeline_routes.py  api_screener.py  asset_profile.py  backtest_report.py  backtest_service.py  batch_pipeline.py  book_metrics.py  context_registry.py  cryptofeed_adapter.py  cryptofeed_runner.py  data_quality.py  database.py  db.py  db_schema.py  deep_health.py  diagnostics.py  event_risk.py  exchange_adapter.py  exchange_announcements.py  export_service.py  external_news.py  feed_callbacks.py  forced_flow.py  funding.py  gdelt_adapter.py  liquidity.py  macro.py  macro_adapters.py  macro_context.py  main.py  market_data.py  market_filters.py  market_module.py  (+41 more)
backend/app/routes/: status.py
backend/app/services/: math_tools.py
database/: timescale_schema.sql
deploy/: OPERATIONS.md  README.md  env.example.production  processes.md  systemd-api.service  systemd-feed.service  systemd-scheduler.service  systemd-stream.service
docs/: API.md  ARCHITECTURE.md  DASHBOARD_PLAN.md  DASHBOARD_SPEC.md  DEPLOYMENT_PLAN.md  INTEGRATIONS.md  PRODUCTION_CHECKLIST.md  PRODUCTION_DB.md  ROADMAP.md  RUNBOOK.md  RUNTIME_CHECK.md  SERVICE_MAP.md  STORAGE_MODEL.md
frontend/: README.md  app.js  index.html
frontend-next/: README.md  package.json
research/: README.md  simple_backtest.py
scripts/: init_postgres.py  run_scheduler.sh  run_tests.sh  (+2 more)
(+7 files in other folders)
