[project]
name = "crypto-ai-advisor-backend"
version = "0.1.0"
dependencies = [
  "fastapi",
  "uvicorn"
]

[project.optional-dependencies]
exchange = ["ccxt"]
postgres = ["psycopg[binary]"]
streaming = ["cryptofeed"]
production = ["ccxt", "psycopg[binary]", "cryptofeed"]

[tool.uvicorn]
app = "app.server:server"
